cluster/apps/media-server/prowlarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: media-server
  labels:
    app.kubernetes.io/name: prowlarr
  annotations:
    ignore-check.kube-linter.io/no-read-only-root-fs: "Unsupported for this app."
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: prowlarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: prowlarr
    spec:
      # serviceAccountName: default
      # automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      securityContext:
        runAsUser: 109696
        runAsGroup: 109696
        fsGroup: 109696
      containers:
        - name: prowlarr
          image: "ghcr.io/onedr0p/prowlarr:1.9.4.4039"
          imagePullPolicy: IfNotPresent
          ports:
            - name: prowlarr-http
              containerPort: 9696
              protocol: TCP
          volumeMounts:
            - name: prowlarr-data
              mountPath: /config
          resources:
            limits:
              cpu: 2000m
              memory: 500Mi
            requests:
              cpu: 500m
              memory: 500Mi
          livenessProbe:
            exec:
              command:
              - /usr/bin/env
              - bash
              - -c
              - curl --fail localhost:9696/api/v1/system/status?apiKey=`IFS=\> && while read -d
                \< E C; do if [[ $E = "ApiKey" ]]; then echo $C; fi; done < /config/config.xml`
            failureThreshold: 5
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 9696
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 9696
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
          securityContext:
            runAsNonRoot: true
            privileged: false
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
      volumes:
        - name: prowlarr-data
          emptyDir:
            sizeLimit: 1Gi
