cluster/apps/media-server/prowlarr/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: media-server
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: prowlarr
  ports:
    - name: prowlarr-http
      port: 9696
      protocol: TCP
      targetPort: prowlarr-http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  namespace: media-server
  labels:
    app.kubernetes.io/name: prowlarr
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - prowlarr.homelab.internal
      secretName: prowlarr-cert
  rules:
    - host: prowlarr.homelab.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr
                port:
                  name: prowlarr-http
